# franc-master-control

./: .gitmodules  CMakeLists.txt  CREATE  FRANC  README.md  ROCKETRY  config.cfg  main.py  requirements.txt
include/: aprs.h  config.h  interconnect.h  master_sensor_struct.h  spi_bus.h  transmitter.h
include/registers/: LSM6DS032.h
run/: aprs-msg.py  track-hackrf.sh
schema/: generate_flatbuffers.sh
scripts/: post_build_script.sh
src/: aprs.cpp  config.cpp  deserializer.py  dsp.cpp  interconnect.cpp  logger.cpp  main.cpp  modulator.py  transmission.py  transmit.cpp
src/aprs/python/: aprs.py  ax25.py  dsp.py
src/gfsk/: dsp.py  main_gfsk.py
src/lib/: ringbuffer.py
src/qpsk/: dsp.py
src/simplefm/: dsp.py
src/spi/: spi_bus.cpp
src/voice/: dsp.py  tts.py
